# skills-manager

./: .gitignore  .mcp.json  AGENTS.md  RALPH.md  README.md  ralph.sh
.agent/: PROMPT.md  STEERING.md  STRUCTURE.md  tasks.json
.agent/logs/: LOG.md
.agent/prd/: PRD.md  SUMMARY.md
.agent/tasks/: TASK-001.json  TASK-002.json  TASK-003.json  TASK-004.json  TASK-007.json  TASK-008.json  TASK-015.json  TASK-016.json  TASK-019.json  TASK-022.json  TASK-024.json  TASK-025.json  TASK-027.json  TASK-028.json  TASK-030.json  TASK-031.json  TASK-034.json  TASK-035.json  TASK-036.json  TASK-040.json  TASK-041.json  TASK-042.json  TASK-043.json  TASK-044.json  TASK-046.json  TASK-047.json  TASK-048.json  TASK-051.json  TASK-053.json  TASK-054.json  TASK-056.json  TASK-059.json  TASK-060.json  (+11 more)
.claude/: settings.json
apps/api/: pyproject.toml
apps/api/migrations/versions/: 0001_initial_schema.py
apps/api/skillhub/api/: auth.py  main.py
apps/api/skillhub/application/: run_comparison.py  saved_views.py
apps/api/skillhub/domain/: errors.py
apps/api/skillhub/infrastructure/db/: repositories.py  schema.sql  tables.py
apps/api/tests/: test_api_commands.py  test_api_persistence.py  test_saved_views.py  test_sql_repository.py  test_sqlalchemy_metadata.py
demo-backend/: README.md
docs/: MVP_SPEC.md  api-contract.md  formal-architecture-v0.1.md  formal-tech-stack.md  formal-ui-design.md  product-completion-audit-2026-05-08.md  product-ux-friction-audit-2026-05-14.md  product-ux-review.md  sqlite-schema-spike.md
scripts/: dev.sh  run-uvicorn-socket-activated.rb
(+222 files in other folders)
