[project]
name = "skillhub-api"
version = "0.1.0"
description = "Formal SkillHub API skeleton"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skillhub*"]
